--- a/ExamenIndividual/ExamenIndividual/ExamenIndividual.csproj
+++ b/ExamenIndividual/ExamenIndividual/ExamenIndividual.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arcilla.cs" />
+    <Compile Include="Carrito.cs" />
+    <Compile Include="Productos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Store.cs" />
